# Connect2plus2

./: CMakeLists.txt  CircularBuffer.h  ConnectFour.cpp  GetBoard.cpp  GetBoard.h  README.md  main.cpp
connect4/: Solver.cpp  c4solver  generator
